--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,9 +9,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # API代理
-    location /api/ {
-        proxy_pass http://backend:8000/;
+    # 后端API代理（所有后端路由前缀）
+    location ~ ^/(auth|chat|model|model-config|training|admin|playground|dify|health|docs|openapi.json|redoc) {
+        proxy_pass http://backend:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
